--- a/app/src/main/res/layout/service_editor_fragment.xml
+++ b/app/src/main/res/layout/service_editor_fragment.xml
@@ -18,14 +18,29 @@
         android:hint="@string/description"
         android:layout_marginTop="30dp"/>
 
-    <EditText
-        android:id="@+id/service_price_ET"
-        android:layout_width="100dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:maxLength="7"
-        android:hint="@string/price_in_rub"
-        android:layout_marginTop="30dp"/>
+        android:orientation="horizontal">
+        
+        <EditText
+            android:id="@+id/service_price_ET"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:maxLength="7"
+            android:hint="@string/price_in_rub"
+            android:layout_marginTop="30dp"/>
+
+        <ImageView
+            android:id="@+id/photo1"
+            android:layout_width="wrap_content"
+            android:layout_height="75dp"
+            android:adjustViewBounds="true"
+            android:src="@drawable/default_pic" />
+
+        
+    </LinearLayout>
 
     <Button
         android:id="@+id/save"
