--- a/app/src/main/res/layout/service_editor_fragment.xml
+++ b/app/src/main/res/layout/service_editor_fragment.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    
+
+
     <EditText
         android:id="@+id/service_name_ET"
         android:layout_width="match_parent"
@@ -18,7 +19,7 @@
         android:hint="@string/description"
         android:layout_marginTop="30dp"/>
 
-        
+
     <EditText
         android:id="@+id/service_price_ET"
         android:layout_width="100dp"
@@ -42,8 +43,14 @@
             android:adjustViewBounds="true"
             android:src="@drawable/default_pic" />
 
-    </LinearLayout>
+        <ProgressBar
+            android:id="@+id/progress"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
 
+    </LinearLayout>
 
 
     <Button
