--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,6 +3,7 @@
     <array name="menu">
         <item>Поиск услуги</item>
         <item>Добавить услугу</item>
+        <item>Мои услуги</item>
         <item>Мои сообщения</item>
         <item>-</item>
         <item>Настройки</item>
