--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="menu">
-        <item>Поиск услуги</item>
+        <item>Поиск артистов</item>
         <item>Добавить услугу</item>
         <item>Мои услуги</item>
-        <item>Мои сообщения</item>
         <item>-</item>
         <item>Настройки</item>
         <item>Выход</item>
