--- a/app/src/main/res/layout/service_list_item.xml
+++ b/app/src/main/res/layout/service_list_item.xml
@@ -27,21 +27,17 @@
             android:layout_marginStart="15dp">
 
             <TextView
+                android:layout_marginTop="15dp"
                 android:id="@+id/service_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"/>
+                android:layout_marginBottom="20dp"/>
 
             <TextView
                 android:id="@+id/service_price"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"/>
-
-            <TextView
-                android:id="@+id/service_rating"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
