--- a/app/src/main/res/layout/service_fragment.xml
+++ b/app/src/main/res/layout/service_fragment.xml
@@ -3,13 +3,14 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="@dimen/activity_horizontal_margin">
 
     <LinearLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/container">
+        android:orientation="vertical">
 
         <ProgressBar
             android:id="@+id/progress"
@@ -20,7 +21,8 @@
         <TextView
             android:id="@+id/name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/description"
@@ -32,6 +34,7 @@
             android:id="@+id/price"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="end"
             android:layout_marginTop="30dp" />
     </LinearLayout>
 </ScrollView>
