--- a/app/src/main/res/layout/service_fragment.xml
+++ b/app/src/main/res/layout/service_fragment.xml
@@ -26,7 +26,7 @@
 
         <TextView
             android:id="@+id/price"
-            android:textColor="@color/md_teal_500"
+            android:textColor="@color/md_teal_700"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -39,12 +39,14 @@
             android:layout_marginTop="30dp" />
 
         <Button
+            android:id="@+id/connect_with_author"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginTop="15dp"
             android:layout_gravity="end"
             android:text="@string/connect_with_author"
-            style="@style/Widget.AppCompat.Button.Colored" />
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_marginBottom="20dp"/>
 
     </LinearLayout>
 </ScrollView>
