--- a/app/src/main/res/layout/new_service_activity.xml
+++ b/app/src/main/res/layout/new_service_activity.xml
@@ -78,7 +78,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="75dp"
                         android:adjustViewBounds="true"
-                        android:src="@drawable/default_pic" />
+                        android:src="@drawable/add_button" />
 
 
                 </LinearLayout>
