--- a/app/src/main/res/layout/service_list_item.xml
+++ b/app/src/main/res/layout/service_list_item.xml
@@ -15,28 +15,29 @@
 
         <ImageView
             android:id="@+id/service_photo"
-            android:src="@drawable/default_pic"
             android:layout_width="100dp"
-            android:layout_height="100dp" />
+            android:layout_height="100dp"
+            android:src="@drawable/default_pic" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_marginLeft="15dp"
-            android:layout_marginStart="15dp">
+            android:layout_marginStart="15dp"
+            android:orientation="vertical">
 
             <TextView
-                android:layout_marginTop="15dp"
                 android:id="@+id/service_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"/>
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="15dp" />
 
             <TextView
                 android:id="@+id/service_price"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:textColor="@color/accent" />
 
         </LinearLayout>
     </LinearLayout>
